Fix text overflow pokemon field name

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -70,6 +70,9 @@ section {
 	min-height: 200px;
 	min-width: 200px;
 }
+.max-w-25 {
+	max-width: 25rem;
+}
 
 /* BACK BUTTON */
 .back-svg {
